--- a/reel.html
+++ b/reel.html
@@ -105,7 +105,7 @@
 						<li>
 							<figure>
 								<img src="img/thumb/14.png" alt="img02"/>
-								<figcaption><h3>Record, Mix and Sound Design</h3><p>The Holdouts </p></figcaption>
+								<figcaption><h3>Sound Editor, Sound Design and Mixer</h3><p>The Holdouts </p></figcaption>
 							</figure>
 						</li>
 						<li>
@@ -117,7 +117,7 @@
 						<li>
 							<figure>
 								<img src="img/thumb/16.png" alt="img04"/>
-								<figcaption><h3>Record, Mix and Sound Design</h3><p>Visit 57 - CoPilot Pictures</p></figcaption>
+								<figcaption><h3>Sound Editor, Sound Design and Mixer</h3><p>Visit 57 - CoPilot Pictures</p></figcaption>
 							</figure>
 						</li>
 						<li>
@@ -147,13 +147,13 @@
 						<li>
 							<figure>
 								<img src="img/thumb/21.png" alt="img03"/>
-								<figcaption><h3>Record, Mix and Sound Design</h3><p>Sunburn - Vinyl Foote Productions</p></figcaption>
+								<figcaption><h3>Sound Editor, Sound Design and Mixer</h3><p>Sunburn - Vinyl Foote Productions</p></figcaption>
 							</figure>
 						</li>
 						<li>
 							<figure>
 								<img src="img/thumb/22.png" alt="img04"/>
-								<figcaption><h3>Record, Mix and Sound Design</h3><p>Cocked and Locked - Pineal Films Production</p></figcaption>
+								<figcaption><h3>Sound Editor, Sound Design and Mixer</h3><p>Cocked and Locked - Pineal Films Production</p></figcaption>
 							</figure>
 						</li>
 					
@@ -332,7 +332,7 @@
 						<li>
 							<figure>
 								<figcaption>
-									<h3>Record, Mix and Sound Design</h3>
+									<h3>Sound Editor, Sound Design and Mixer</h3>
 									<p>The Holdouts</p>
 								</figcaption>
 								<video width="560" height="420" controls>
@@ -358,7 +358,7 @@
 						<li>
 							<figure>
 								<figcaption>
-									<h3>Record, Mix and Sound Design</h3>
+									<h3>Sound Editor, Sound Design and Mixer</h3>
 									<p>Visit 57 - CoPilot Pictures</p>
 								</figcaption>
 								<video width="560" height="420" controls>
@@ -423,7 +423,7 @@
 						<li>
 							<figure>
 								<figcaption>
-									<h3>Record, Mix and Sound Design</h3>
+									<h3>Sound Editor, Sound Design and Mixer</h3>
 									<p>Sunburn - Vinyl Foote Productions</p>
 								</figcaption>
 								<video width="560" height="420" controls>
@@ -436,7 +436,7 @@
 						<li>
 							<figure>
 								<figcaption>
-									<h3>Record, Mix and Sound Design</h3>
+									<h3>Sound Editor, Sound Design and Mixer</h3>
 									<p>Cocked and Locked - Pineal Films Production</p>
 								</figcaption>
 								<video width="560" height="420" controls>
